# modern-cpp-prac

./: .gitignore  README.md
alignment/: CMakeLists.txt  README.md
alignment/include/shared/: Alignment.h
alignment/src/: Alignment.cpp  main.cpp
allocator/: CMakeLists.txt  Makefile  README.md
allocator/include/shared/: BasicAllocator.h  BasicArena.h
allocator/src/: BasicAllocator.cpp  BasicArena.cpp  main.cpp
rule-of-five/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
rule-of-five/widget/: CMakeLists.txt  Makefile  Widget.cpp  Widget.h  cmake_install.cmake
simple-client-server/: Makefile  README.md  client  client.cc  server  server.cc
small_buffer/: CMakeLists.txt  README.md
small_buffer/include/shared/: SBOVector.h
small_buffer/src/: Utils.h  main.cpp
smart_ptr/: CMakeLists.txt  README.md
smart_ptr/include/shared/: SingleThreadSharedPtr.h
smart_ptr/src/: main.cpp  tests.cpp
trivia/: CMakeLists.txt  README.md
trivia/include/shared/: EndianChecker.h  MyItoa.h
trivia/src/: Atomics.h  EndianChecker.cpp  PushVsEmplace.h  main.cpp
